--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mn.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MapMeasure - Interactive Area Measurement Tool</title>
+    <title>Ukur Lahanmu - Website Pengukuran Lahan</title>
     <meta name="description" content="Professional area measurement tool with interactive mapping capabilities using OpenLayers">
   </head>
   <body>
